--- a/style/components/header.css
+++ b/style/components/header.css
@@ -8,15 +8,15 @@ h1{
     color: rgba(182,155,103,255);
     text-decoration: overline;
     display: inline-block;
-    margin: 5% 0 0 36.9%;
+    margin: 4.9% 0 0 36.1%;
 }
 .logo{
     margin-top: 2px;
-    margin-left: 56.3%;
+    margin-left: 55.5%;
 }
 .lamp{
     width: 17.5%;
-    margin-left: 41.5%;
+    margin-left: 40.5%;
     margin-top: 3%;
     opacity: 70%;
 }
@@ -24,18 +24,19 @@ h1{
     font-size: 47px;
     color: #b7a075;
     margin-top: 0.5%;
-    margin-left: 4.75%;
+    margin-left: 3.75%;
+    letter-spacing: 0.5px;
 }
 .scroll{
     font-size: 16px;
     color: rgba(69,69,69,255);
     margin-top: 9.9%;
-    margin-left: 42%;
+    margin-left: 41.2%;
     display: block;
 }
 .down{
     display: block;
-    margin-left: 48.5%;
+    margin-left: 48.1%;
     width: 3%;
-    margin-top: 0.5%;
+    margin-top: 0.4%;
 }
