--- a/style/components/header.css
+++ b/style/components/header.css
@@ -5,26 +5,31 @@ header{
 }
 h1{
     font: 47px PlayfairDisplaySC-Regular;
-    color: rgba(182,155,103,255);
-    text-decoration: overline;
+    color: rgba(182,155,103,1);
+    border-top: 1px solid rgba(182,155,103,1);
+    line-height: 1.2;
     display: inline-block;
     margin: 4.9% 0 0 36.1%;
+    position: relative;
 }
-.logo{
-    margin-top: 2px;
-    margin-left: 55.5%;
+h1 span{
+    font: 24px Ubuntu-Light;
+    color: rgba(180,180,180,1);
+    position: absolute;
+    bottom: -33px;
+    right: -74px;
 }
 .lamp{
     width: 17.5%;
     margin-left: 40.5%;
-    margin-top: 3%;
+    margin-top: 7%;
     opacity: 70%;
 }
 .caption{
     font-size: 47px;
     color: #b7a075;
-    margin-top: 0.5%;
-    margin-left: 3.75%;
+    margin-top: 1.1%;
+    margin-left: 3.5%;
     letter-spacing: 0.5px;
 }
 .scroll{
@@ -36,7 +41,7 @@ h1{
 }
 .down{
     display: block;
-    margin-left: 48.1%;
     width: 3%;
     margin-top: 0.4%;
+    margin-left: 47.5%;
 }
