--- a/style/components/services.css
+++ b/style/components/services.css
@@ -5,7 +5,7 @@ section{
 }
 .services-name{
     font: 51px PlayfairDisplaySC-Bold;
-    margin: 0.2% 0 auto 39.5%;
+    margin: 0.2% 0 auto 39.5%; /*not correctly aligned*/
     letter-spacing: -0.5px;
     color: rgba(180,180,180,255);
 }
