--- a/style/components/common.css
+++ b/style/components/common.css
@@ -4,5 +4,5 @@ body{
     margin: 0;
     background: #2C2C2C;
     font: 24px Ubuntu-Light;
-    color: rgba(180,180,180,255);
+    color: rgba(180,180,180,255);/*incorrect; simple to use HEX: #b4b4b4*/
 }
