--- a/style/components/common.css
+++ b/style/components/common.css
@@ -1,8 +1,9 @@
 body{
-    width: 100%;
+    width: 80%;
     min-width: 375px;
     margin: 0;
     background: #2C2C2C;
     font: 24px Ubuntu-Light;
-    color: rgba(180,180,180,255);
+    color: #b4b4b4;
+    padding: 0 10%;
 }
