--- a/style/components/header.css
+++ b/style/components/header.css
@@ -2,46 +2,52 @@ header{
     width: 80%;
     height: 825px;
     margin: 0 10%;
+    text-align: center;
 }
 h1{
     font: 47px PlayfairDisplaySC-Regular;
-    color: rgba(182,155,103,1);
-    border-top: 1px solid rgba(182,155,103,1);
+    color: #b69b67;
+    border-top: 1px solid #b69b67;
     line-height: 1.2;
     display: inline-block;
-    margin: 4.9% 0 0 36.1%;
+    margin-top: 4.9%;
     position: relative;
+    top: -292px;
+    left: -6%;
 }
 h1 span{
     font: 24px Ubuntu-Light;
-    color: rgba(180,180,180,1);
+    color: #b4b4b4;
     position: absolute;
-    bottom: -33px;
+    bottom: -35px;
     right: -74px;
 }
 .lamp{
     width: 17.5%;
-    margin-left: 40.5%;
-    margin-top: 7%;
+    margin-top: 18%;
     opacity: 70%;
+    margin-left: -28%;
 }
 .caption{
-    font-size: 47px;
+    font-size: 49px;
     color: #b7a075;
-    margin-top: 1.1%;
-    margin-left: 3.5%;
-    letter-spacing: 0.5px;
+    margin-top: -2.9%;
+    margin-bottom: 9%;
+    letter-spacing: -0.7px;
 }
 .scroll{
     font-size: 16px;
-    color: rgba(69,69,69,255);
-    margin-top: 9.9%;
-    margin-left: 41.2%;
-    display: block;
+    color: #454545;
+    left: -1%;
+    position: relative;
 }
-.down{
-    display: block;
-    width: 3%;
-    margin-top: 0.4%;
-    margin-left: 47.5%;
+.scroll::after{
+    content: "";
+    background-image: url(../../images/scroll.png);
+    background-repeat: no-repeat;
+    position: absolute;
+    bottom: -27px;
+    width: 48px;
+    height: 26px;
+    right: 73px;
 }
