--- a/style/components/services.css
+++ b/style/components/services.css
@@ -1,13 +1,15 @@
 section{
-    width: 80%;
+    width: 100%;
     height: 650px;
-    margin: 0 10%;
 }
 .services-name{
     font: 51px PlayfairDisplaySC-Bold;
-    margin: 0.2% 0 auto 39.5%;
+    text-align: center;
+    margin-top: 0.2%;
+    margin-bottom: 0%;
+    padding-right: 22px;
     letter-spacing: -0.5px;
-    color: rgba(180,180,180,255);
+    color: #b4b4b4;
 }
 .services{
     display: flex;
@@ -22,10 +24,10 @@ section{
     width: 68%;
 }
 .name-list{
-    color: rgba(182,155,103,1);
+    color: #b69b67;
     font-size: 46px;
     letter-spacing: 0.5px;
-    border-top: 1px solid rgba(182,155,103,1);
+    border-top: 1px solid #b69b67;
     position: relative;
     margin: 10% 26% 12% 5%;
 }
@@ -45,10 +47,10 @@ section{
 }
 .list-item a{
     text-decoration: none;
-    color: rgba(180,180,180,1);
+    color: #b4b4b4;
 }
 .list-item a:hover{
-    color: rgba(182,155,103,1);
+    color: #b69b67;
 }
 .services-text{
     width: 48%;
@@ -60,7 +62,7 @@ section{
     text-align: justify;
 }
 .services-text span{
-    color: rgba(182,155,103,255);
+    color: #b69b67;
 }
 .laptop{
     width: 74%;
