--- a/style/style.css
+++ b/style/style.css
@@ -7,7 +7,7 @@
         height: 440px;
     }
     h1{
-        margin: 5% 0 0 12%;
+        top: 8px;
         font-size: 31px;
     }
     h1 span{
@@ -15,22 +15,11 @@
     }
     .lamp{
         width: 35%;
-        margin-left: 34.5%;
+        margin-left: 0;
     }
     .caption{
         font-size: 25px;
         text-align: center;
-    }
-    .scroll{
-        margin-left: 20%;
-    }
-    .down{
-        margin-left: 46.5%;
-        width: 10%;
-        margin-top: 2.5%;
-    }
-    .services-name{
-        margin: 0.5% 0 auto 11.2%;
     }
     .services{
         flex-direction: column;
@@ -51,6 +40,7 @@
     }
     .list{
         text-align: center;
+        padding-left: 0;
     }
     .services-text{
         width: 100%;
@@ -62,45 +52,39 @@
 }
 @media only screen and (min-width: 375px) and (max-width: 576px) {
     header{
-        height: 500px;
+        height: 530px;
     }
     h1{
-        margin: 5% 0 0 9.9%;
+        top: -156px;
         font-size: 39px;
+        left: -19%;
     }
     .lamp {
         width: 20%;
-    }
-    .caption{
-        text-align: center;
-    }
-    .scroll{
-        margin-left: 28%;
-    }
-    .down{
-        margin-left: 50.5%;
-        width: 6%;
-        margin-top: 1%;
+        margin: 30% 0 10% -58%;
     }
     .services-name{
-        margin: 0.5% 0 auto 18.2%;
+        margin-top: 15.5%;
     }
     .services{
         flex-direction: column;
+        text-align: center;
     }
     .left-services {
-        width: 65%;
-        margin-left: 17%;
+        width: 100%;
+        justify-content: center;
     }
     .right-services{
         width: 100%;
+        justify-content: center;
     }
     .name-list{
-        margin: 10% -26% 12% -2%;
+        font-size: 37px;
+        margin: 3%;
     }
     .name-list .line{
-        right: -20px;
-        width: 108%;
+        right: -8px;
+        width: 104%;
     }
     .services-text{
         width: 100%;
@@ -115,22 +99,21 @@
         height: 525px;
     }
     h1{
-        margin: 5% 0 0 14.9%;
+        top: -180px;
+        left: -18%;
+    }
+    .lamp{
+        width: 25%;
+        margin: 25% 0 0 -62%;
     }
     .caption{
         text-align: center;
-    }
-    .scroll{
-        margin-left: 33%;
-    }
-    .down{
-        margin-left: 46.5%;
     }
     section{
         height: 600px;
     }
     .services-name{
-        margin: 0.5% 0 auto 30.2%;
+        margin-top: 10%;
     }
     .left-services{
         width: 50%;
@@ -157,16 +140,17 @@
 }
 @media only screen and (min-width: 768px) and (max-width: 992px) {
     header{
-        height: 625px;
+        height: 500px;
     }
     h1{
-        margin: 5% 0 0 29.9%;
+        top: -172px;
+        left: -17%;
+    }
+    .lamp{
+        margin-left: -53%;
     }
     .caption{
         text-align: center;
-    }
-    .scroll{
-        margin-left: 39%;
     }
     .name-list{
         margin: 10% 19% 12% 5%;
@@ -175,9 +159,6 @@
     .name-list .line{
         width: 120%;
         right: -33px;
-    }
-    .services-name{
-        margin: 0.5% 0 auto 36.2%;
     }
     .services-text{
         width: 80%;
@@ -189,13 +170,12 @@
         height: 650px;
     }
     h1{
-        margin: 4.9% 0 0 28.1%;
+        top: -205px;
+        left: -13%;
     }
-    .caption{
-        text-align: center;
-    }
-    .down{
-        margin-left: 50.5%;
+    .lamp{
+        margin-left: -43%;
+        margin-top: 15%;
     }
     .services-text{
         width: 100%;
