--- a/style/components/header.css
+++ b/style/components/header.css
@@ -1,18 +1,18 @@
-/*TODO: [global]more items aligned by center; use for container (header) text-align: center*/
-
 header{
-    width: 80%;
+    width: 100%;
     height: 825px;
-    margin: 0 10%;
     text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 h1{
     font: 47px PlayfairDisplaySC-Regular;
     color: #b69b67;
     border-top: 1px solid #b69b67;
     line-height: 1.2;
-    display: inline-block;
     margin-top: 4.9%;
+    margin-left: -2%;
     position: relative;
 }
 h1 span{
@@ -23,32 +23,133 @@ h1 span{
     right: -74px;
 }
 .lamp{
-    margin-top: 7%;
+    margin-top: 5%;
+    margin-left: -1%;
     opacity: 70%;
 }
 .lamp img {
-    width: 17.5%;
+    width: 81.5%;
 }
 .caption{
-    font-size: 49px;
+    font-size: 48.5px;
     color: #b7a075;
-    margin-top: -2.9%;
-    margin-bottom: 9%;
+    margin: 0.4% 0 9.2% -2%;
     letter-spacing: -0.7px;
 }
 .scroll{
-    font-size: 16px;
-    color: #454545;
+    width: 100%;
     left: -1%;
     position: relative;
 }
-.scroll::after{
+.scroll span{
+    font-size: 16px;
+    color: #454545;
+
+}
+.scroll span::after{
     content: "";
     background-image: url(../../images/scroll.png);
     background-repeat: no-repeat;
     position: absolute;
-    bottom: -27px;
     width: 48px;
     height: 26px;
-    right: 73px;
+    transform: translate(-250%, 112%);
+}
+
+@media only screen and (max-width : 320px) {
+    header {
+        height: 500px;
+    }
+    h1 {
+        font-size: 26px;
+    }
+    h1 span {
+        font-size: 16px;
+    }
+    .lamp img {
+        width: 39%;
+    }
+    .caption {
+        font-size: 23px;
+    }
+    .scroll {
+        width: 45%;
+    }
+    .scroll span::after {
+        transform: translate(-100%, 112%);
+    }
+}
+
+@media only screen and (min-width : 321px) {
+    header {
+        height: 500px;
+    }
+    h1 {
+        font-size: 26px;
+    }
+    h1 span {
+        font-size: 16px;
+    }
+    .lamp img {
+        width: 39%;
+    }
+    .caption {
+        font-size: 23px;
+    }
+    .scroll {
+        width: 45%;
+    }
+    .scroll span::after {
+        transform: translate(-100%, 112%);
+    }
+}
+
+@media only screen and (min-width : 576px) {
+    header{
+        height: 550px;
+    }
+    h1{
+        font-size: 35px;
+    }
+    h1 span{
+        font-size: 20px;
+    }
+    .caption{
+        font-size: 30px;
+    }
+    .scroll span::after {
+        transform: translate(-255%, 112%);
+    }
+}
+
+/*@media only screen and (min-width : 768px) {
+
+}
+
+@media only screen and (min-width : 992px) {
+
+}*/
+
+@media only screen and (min-width : 1200px) {
+    header{
+        height: 700px;
+    }
+    h1 {
+        font-size: 47px;
+    }
+    h1 span {
+        font-size: 24px;
+    }
+    .lamp img {
+        width: 81.5%;
+    }
+    .caption {
+        font-size: 48.5px;
+    }
+    .scroll {
+        width: 100%;
+    }
+    .scroll span::after {
+        transform: translate(-250%, 112%);
+    }
 }
