--- a/style/components/header.css
+++ b/style/components/header.css
@@ -1,141 +1,157 @@
-header{
+header {
     width: 100%;
-    height: 790px;
     display: flex;
     flex-direction: column;
     align-items: center;
     text-align: center;
 }
-h1{
-    font: 47px PlayfairDisplaySC-Regular;
+
+h1 {
+    font-size: 34px;
+    font-family:  "PlayfairDisplaySC-Regular", sans-serif;
     color: #b69b67;
     border-top: 1px solid #b69b67;
     line-height: 1.2;
     margin-top: 4.9%;
-    margin-left: -2%;
     position: relative;
 }
-h1 span{
+
+h1 span {
     font: 24px Ubuntu-Light;
     color: #b4b4b4;
     position: absolute;
     bottom: -62%;
-    right: -24%;
+    right: -10%;
 }
+
 .lamp {
     width: 17.5%;
     margin-top: 5%;
     margin-left: -1%;
     opacity: 70%;
+    min-width: 100px;
 }
-.caption{
-    font-size: 48.5px;
+
+.caption {
+    font-size: 23px;
     color: #b7a075;
-    margin: 0.9% 0 9.2% -2%;
+    margin: 0.9% 0 9.2%;
     letter-spacing: -0.7px;
 }
-.scroll{
-    left: -1%;
+
+.scroll {
     position: relative;
     align-self: center;
-}
-.scroll span{
     font-size: 16px;
     color: #454545;
-
 }
-.scroll span::after{
+
+.scroll::after {
     content: "";
     background-image: url(../../images/scroll.png);
     background-repeat: no-repeat;
     position: absolute;
     width: 48px;
     height: 26px;
-    transform: translate(-250%, 112%);
+    top: 100%;
+    left: 50%;
+    transform: translate(-50%, 50%);
 }
 
-@media only screen /*and (min-width: 992px) */and (max-width: 1200px) {
-    header{
-        height: 650px;
+
+@media screen and (min-width: 576px) {
+    h1 {
+        font-size: 47px;
     }
-    h1{
-        font-size: 45px;
+
+    .caption {
+        font-size: 3.5vw;
     }
-    h1 span{
+}
+
+@media screen and (min-width: 768px) {
+
+}
+
+@media screen and (min-width: 992px) {
+
+}
+
+@media screen and (min-width: 1200px) {
+    .caption {
+        font-weight: 500;
+        font-size: 42px;
+    }
+}
+
+@media only screen /*and (min-width: 992px) */
+and (max-width: 1200px) {
+
+
+    h1 span {
         font-size: 22px;
     }
-    .lamp img{
+
+    .lamp img {
         width: 70%;
     }
-    .caption{
-        font-size: 43px;
-    }
+
+
 }
-@media only screen /*and (min-width: 768px) */and (max-width: 992px) {
-    header{
-        height: 530px;
-    }
-    h1{
-        font-size: 36px;
-    }
-    h1 span{
+
+@media only screen /*and (min-width: 768px) */
+and (max-width: 992px) {
+
+
+    h1 span {
         font-size: 20px;
     }
-    .lamp img{
+
+    .lamp img {
         width: 60%;
     }
-    .caption{
-        font-size: 38px;
-    }
+
+
 }
-@media only screen/* and (min-width: 576px) */and (max-width: 768px) {
-    header{
-        height: 400px;
-    }
-    h1{
-        font-size: 30px;
-    }
-    h1 span{
+
+@media only screen/* and (min-width: 576px) */
+and (max-width: 768px) {
+
+
+    h1 span {
         font-size: 18px;
     }
-    .lamp img{
+
+    .lamp img {
         width: 45%;
     }
-    .caption{
-        font-size: 28px;
-    }
+
+
 }
-@media only screen /*and (min-width: 320px)*/ and (max-width: 576px) {
-    header{
-        height: 350px;
-    }
-    h1{
-        font-size: 26px;
-    }
+
+@media only screen /*and (min-width: 320px)*/
+and (max-width: 576px) {
+
+
     h1 span {
         font-size: 16px;
     }
+
     .lamp img {
         width: 39%;
     }
-    .caption {
-        font-size: 23px;
-    }
+
+
 }
-@media only screen and (max-width : 320px) {
-    header {
-        height: 350px;
-    }
-    h1 {
-        font-size: 26px;
-    }
+
+@media only screen and (max-width: 320px) {
     h1 span {
         font-size: 16px;
     }
+
     .lamp img {
         width: 39%;
     }
-    .caption {
-        font-size: 23px;
-    }
+
+
 }
